Added google logo with css styling

--- a/index.html
+++ b/index.html
@@ -5,11 +5,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="styles/style.css" rel="stylesheet"></link>
     <title>Google</title>
 </head>
 
 <body>
+    <div class="topnav">
+        <a class="active" href="#home">About</a>
+        <a href="#news">Store</a>
+        <div class="topnav-right">
+            <a href="#search">Gmail</a>
+            <a href="#about">Images</a>
+            <a href="#"><img src="images/appImg.png" alt="Google apps" /></a>
+            <a href="#" class="email-img"><img src="images/email.png" alt="Google apps" /></a>
+        </div>
+    </div>
+    <main>
+        <div class="main-logo">
+            <img class="logo-img" src="images/google.jpg" />
 
+        </div>
+        <div class="main-bar">
+            <input class="search-bar" type="search" />
+        </div>
+    </main>
 </body>
 
 </html>
