Styling the search box and the logo

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
         </div>
         <div class="main-bar">
-            <input class="search-bar" type="search" />
+            <input id="icon" style="text-indent:17px;" class="search-bar" maxlength="250" type="search" id="serch-img" value>
+
         </div>
     </main>
 </body>
