Styling of theh search bar and the button

--- a/index.html
+++ b/index.html
@@ -26,9 +26,18 @@
 
         </div>
         <div class="main-bar">
-            <input id="icon" style="text-indent:17px;" class="search-bar" maxlength="250" type="search" id="serch-img" value>
-
+            <input id="icon" style="text-indent:17px;" class="search-bar" maxlength="300" type="search" id="serch-img" value>
+            <!-- <img src="images/search.png" rel="search" /> -->
         </div>
+        <center>
+            <button>
+              Google Search
+            </button>
+            <button>
+               I'm Feeling Lucky
+            </button>
+        </center>
+
     </main>
 </body>
 
