--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles/style.css" rel="stylesheet"></link>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Google</title>
 </head>
 
@@ -26,8 +27,8 @@
 
         </div>
         <div class="main-bar">
-            <input id="icon" style="text-indent:17px;" class="search-bar" maxlength="300" type="search" id="serch-img" value>
-            <!-- <img src="images/search.png" rel="search" /> -->
+            <input id="icon" class="search-bar" type="search" id="serch-img" value>
+            <i class="fa fa-search fa-lg"></i>
         </div>
         <center>
             <button>
