Adjusted the links

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
 <body>
     <div class="topnav">
-        <a class="active" href="#home">About</a>
-        <a href="#news">Store</a>
+        <a class="active" href="#about">About</a>
+        <a href="#store">Store</a>
         <div class="topnav-right">
-            <a href="#search">Gmail</a>
-            <a href="#about">Images</a>
+            <a href="#gmail">Gmail</a>
+            <a href="#images">Images</a>
             <a href="#"><img src="images/appImg.png" alt="Google apps" /></a>
             <a href="#" class="email-img"><img src="images/email.png" alt="Google apps" /></a>
         </div>
