Adjusted view on windows

--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
         <div class="topnav-right">
             <a href="#gmail">Gmail</a>
             <a href="#images">Images</a>
-            <a href="#"><img src="images/appImg.png" alt="Google apps" /></a>
-            <a href="#" class="email-img"><img src="images/email.png" alt="Google apps" /></a>
+            <!-- <a href="#"><img src="images/appImg.png" alt="Google apps" /></a> -->
+            <!-- <a href="#" class="email-img"><img src="images/email.png" alt="Google apps" /></a> -->
         </div>
     </div>
     <main>
         <div class="main-logo">
             <img class="logo-img" src="images/google.jpg" />
-
         </div>
         <div class="main-bar">
             <input id="icon" class="search-bar" type="search" id="serch-img" value>
