--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div class="topnav-right">
             <a href="#gmail">Gmail</a>
             <a href="#images">Images</a>
-            <!-- <a href="#"><img src="images/appImg.png" alt="Google apps" /></a> -->
-            <!-- <a href="#" class="email-img"><img src="images/email.png" alt="Google apps" /></a> -->
+            <a href="#"><img src="images/appImg.png" alt="Google apps" /></a>
+            <a href="#" class="email-img"><img src="images/email.png" alt="Google apps" /></a>
         </div>
     </div>
     <main>
