--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <a href="#"><span class="material-icons">
                             apps
                         </span></a>
-                        <a href="https://github.com/JohnFTitor" target="_blank"> <span class="material-icons">
+                        <a href="https://github.com/micheaol" target="_blank"> <span class="material-icons">
                             account_circle
                             </span>
                             </a>
